fix: do not use contrast image on apple

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,6 @@ input {
 img {
   border-style: none;
   image-rendering: optimizequality;
-  image-rendering: -webkit-optimize-contrast;
 }
 
 img.responsive {
